# QuizGPT

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  pyproject.toml
src/quizgpt/: __init__.py  cli.py  content.py  deduplicator.py  dimension.py  generator.py  parser.py  prompts.py  utils.py
tests/: test_content.py  test_generator.py  test_prompts.py
