[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quizgpt"
version = "3.4.2"
description = "A Python package for generating unique quizzes (upto 10,000) from text, URLs, or YouTube transcripts using OpenAI."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "QuizGPT Contributors" }
]
requires-python = ">=3.9"
keywords = ["quiz", "openai", "gpt", "education", "learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "openai>=1.0.0",
  "requests>=2.0",
  "validators>=0.20.0",
  "beautifulsoup4>=4.12.0",
  "youtube-transcript-api>=0.6.0",
  "faiss-cpu>=1.7.0",
  "scikit-learn>=1.0.0",
  "numpy>=1.21.0"
]

[project.urls]
Homepage = "https://github.com/parthrana34/QuizGPT"
Repository = "https://github.com/parthrana34/QuizGPT"

[project.scripts]
quizgpt = "quizgpt.cli:main"
